bpo-31692: COUNT_ALLOCS now writes into stderr

Statistics are now written into stderr, rather than stdout.